{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 13,
  "lineage": "a5041dc7-c11f-be3f-7e86-ddfcdb6288a3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:230026260161:internet-gateway/igw-09e7371c41afd1a92",
            "id": "igw-09e7371c41afd1a92",
            "owner_id": "230026260161",
            "region": "eu-central-1",
            "tags": {
              "Name": "maing2-igw"
            },
            "tags_all": {
              "Name": "maing2-igw"
            },
            "vpc_id": "vpc-0ddd54f828c22840a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09e7371c41afd1a92",
            "id": "r-rtb-0e71df3ef689322461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-0e71df3ef68932246",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "230026260161",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-0e71df3ef68932246"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:230026260161:route-table/rtb-0e71df3ef68932246",
            "id": "rtb-0e71df3ef68932246",
            "owner_id": "230026260161",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddd54f828c22840a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "230026260161",
            "id": "rtb-0e71df3ef68932246",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b62b4e6b8f93dea",
            "region": "eu-central-1",
            "route_table_id": "rtb-0e71df3ef68932246",
            "subnet_id": "subnet-0e9f6e3f1f6ac09ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0876133b653fd11bc",
            "region": "eu-central-1",
            "route_table_id": "rtb-0e71df3ef68932246",
            "subnet_id": "subnet-056085c4ad325708f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f137fbb159bdbdf7",
            "region": "eu-central-1",
            "route_table_id": "rtb-0e71df3ef68932246",
            "subnet_id": "subnet-02cd795299296fe76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:230026260161:subnet/subnet-0e9f6e3f1f6ac09ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9f6e3f1f6ac09ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "230026260161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "public-subnet-terraform-1"
            },
            "tags_all": {
              "Name": "public-subnet-terraform-1"
            },
            "vpc_id": "vpc-0ddd54f828c22840a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "230026260161",
            "id": "subnet-0e9f6e3f1f6ac09ae",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:230026260161:subnet/subnet-056085c4ad325708f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056085c4ad325708f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "230026260161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "public-subnet-terraform-2"
            },
            "tags_all": {
              "Name": "public-subnet-terraform-2"
            },
            "vpc_id": "vpc-0ddd54f828c22840a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "230026260161",
            "id": "subnet-056085c4ad325708f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:230026260161:subnet/subnet-02cd795299296fe76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cd795299296fe76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "230026260161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "public-subnet-terraform-3"
            },
            "tags_all": {
              "Name": "public-subnet-terraform-3"
            },
            "vpc_id": "vpc-0ddd54f828c22840a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "230026260161",
            "id": "subnet-02cd795299296fe76",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:230026260161:vpc/vpc-0ddd54f828c22840a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-018a636342459b48a",
            "default_route_table_id": "rtb-0de555226aadeec6c",
            "default_security_group_id": "sg-008bab777d5f37721",
            "dhcp_options_id": "dopt-06331a10e6c8ab39d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ddd54f828c22840a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de555226aadeec6c",
            "owner_id": "230026260161",
            "region": "eu-central-1",
            "tags": {
              "Name": "main-terraform-vpc"
            },
            "tags_all": {
              "Name": "main-terraform-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "230026260161",
            "id": "vpc-0ddd54f828c22840a",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}